--- a/app/src/main/res/layout/activity_calculator.xml
+++ b/app/src/main/res/layout/activity_calculator.xml
@@ -9,11 +9,30 @@
     android:layout_height="match_parent"
     tools:context=".Calculator">
 
+    <TextView
+        android:text="welcome ..."
+        android:id="@+id/tvUsername"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
+
     <EditText
         android:hint="input angka 1"
+        android:drawableStart="@android:drawable/ic_lock_lock"
         android:id="@+id/edAngka1"
         android:inputType="number"
         android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
+
+    <Spinner
+        android:entries="@array/array_kepercayaan"
+        android:id="@+id/spAgama"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
+    <Button
+        android:id="@+id/btnCek"
+        android:text="cek"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
 
 </LinearLayout>
